<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/mainContent"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    </FrameLayout>
    <ListView
        android:id="@+id/listView"
        android:text="@string/in_the_stars"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffd7d618"
        android:clickable="true"
        android:choiceMode="singleChoice">
    </ListView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/zodiac"/>
    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_the_stars"
            android:textColor="#f87217"
            android:textSize="40sp"
            android:textStyle="italic"/>
        <RelativeLayout
            android:id="@+id/signs_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:clickable="true">
            <LinearLayout
                android:id="@+id/top_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/aries_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aries"
                    android:textColor="#F87217"
                    android:clickable="true"
                    android:onClick="Aries"/>
                <Button
                    android:id="@+id/taurus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/taurus"
                    android:textColor="#F87217"
                    android:clickable="true"
                    android:onClick="Taurus"/>
                <Button
                    android:id="@+id/gemini_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/gemini"
                    android:textColor="#F87217"
                    android:clickable="true"
                    android:onClick="Gemini"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/second_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/top_row"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/cancer_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancer"
                    android:textColor="#F87217"
                    android:clickable="true"
                    android:onClick="Cancer"/>
                <Button
                    android:id="@+id/leo_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leo"
                    android:textColor="#F87217"
                    android:clickable="true"
                    android:onClick="Leo"/>
                <Button
                    android:id="@+id/virgo_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/virgo"
                    android:textColor="#F87217"
                    android:clickable="true"
                    android:onClick="Virgo"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/third_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/second_row"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/libra_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/libra"
                    android:textColor="#F87217"
                    android:clickable="true"
                    android:onClick="Libra"/>
                <Button
                    android:id="@+id/scorpio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scorpio"
                    android:textColor="#F87217"
                    android:clickable="true"
                    android:onClick="Scorpio"/>
                <Button
                    android:id="@+id/sag_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sag"
                    android:textColor="#F87217"
                    android:clickable="true"
                    android:onClick="Sagi"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/last_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/third_row"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/cap_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/capricorn"
                    android:textColor="#F87217"
                    android:clickable="true"
                    android:onClick="Capricorn"/>
                <Button
                    android:id="@+id/aquarius_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aquarius"
                    android:textColor="#F87217"
                    android:clickable="true"
                    android:onClick="Aquarius"/>
                <Button
                    android:id="@+id/pisces_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pisces"
                    android:textColor="#F87217"
                    android:clickable="true"
                    android:onClick="Pisces"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>